# Scrapinium

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REORGANIZATION_PLAN.md  ROADMAP.md  STACK.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  rxconfig.py  scrapinium_reflex.py  streamlit_app.py  test_browser_pool_performance.py  test_cache_simple.py  ui_app.py
.github/workflows/: ci.yml  release.yml
assets/: README.md
config/docker/: Dockerfile.production  docker-compose.override.yml
config/k8s/: namespace.yaml
config/nginx/: nginx.conf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DOCKER.md  EXAMPLES.md  SECURITY.md  STACK.md  TESTING.md  index.md
examples/fastapi/: README.md  app.py
examples/reflex/: README.md
examples/streamlit/: README.md
requirements/: base.txt  ml.txt  prod.txt
scripts/: benchmark.py  health_check.py  performance_monitor.py  run_tests.py  setup.py  ui_app.py
src/scrapinium/: __init__.py  exceptions.py  main.py
src/scrapinium/api/: __init__.py  app.py  exception_handler.py  ml_manager.py  task_manager.py  validators.py
src/scrapinium/api/endpoints/: performance.py
src/scrapinium/api/routers/: __init__.py  cache.py  core.py  maintenance.py  performance.py  scraping.py  statistics.py  templates.py  websocket.py
src/scrapinium/api/services/: __init__.py  batch_service.py  scraping_service.py  template_service.py
src/scrapinium/config/: __init__.py  database.py  settings.py
src/scrapinium/llm/: __init__.py  ollama.py
src/scrapinium/ml/: __init__.py  antibot_detector.py  content_analyzer.py  content_classifier.py  ml_pipeline.py
src/scrapinium/models/: __init__.py  database.py  enums.py  schemas.py
src/scrapinium/performance/: __init__.py  optimizer.py  profiler.py
src/scrapinium/scraping/: __init__.py  browser.py  extractor.py  service.py
src/scrapinium/security/: __init__.py  config_security.py  headers.py  input_validator.py  rate_limiter.py
src/scrapinium/ui/: __init__.py  app.py  components.py  styles.py
src/scrapinium/utils/: __init__.py  cleanup.py  compression.py  helpers.py  logging.py  memory.py  streaming.py  validators.py
static/css/: main.css
static/js/: app.js  batch.js  dashboard.js  navigation.js  templates.js
templates/: index.html  simple.html
tests/: __init__.py  conftest.py  test_browser_pool.py  test_cache_performance.py  test_e2e_scenarios.py  test_memory_management.py  test_memory_optimization.py  test_memory_simple.py  test_security.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_api_integration.py
tests/unit/: __init__.py  test_basic_optimization.py  test_cache_system.py  test_ml_pipeline.py  test_security_advanced.py
