[tool.poetry]
name = "scrapinium"
version = "0.1.0"
description = "Solution de scraping intelligent avec LLMs pour structurer les données web"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "scrapinium", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.2"
readability-lxml = "^0.8.1"
html2text = "^2020.1.16"
python-dateutil = "^2.8.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.10.0"
sqlalchemy = "^2.0.23"
redis = "^5.0.1"
python-multipart = "^0.0.6"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
email-validator = "^2.2.0"
aiosqlite = "^0.21.0"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.6"
pre-commit = "^3.5.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true