[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapinium"
version = "2.0.0"
description = "Enterprise-grade web scraping solution with LLM integration and advanced performance optimization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Scrapinium Team", email = "team@scrapinium.com"}
]
maintainers = [
    {name = "Scrapinium Team", email = "team@scrapinium.com"}
]
keywords = [
    "web-scraping",
    "llm", 
    "ai",
    "automation",
    "data-extraction",
    "playwright",
    "fastapi",
    "enterprise",
    "performance",
    "caching"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Web scraping
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "html5lib>=1.1",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    
    # Database & Storage
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    
    # Caching & Performance
    "redis>=5.0.0",
    "hiredis>=2.2.0",
    "lz4>=4.3.0",
    "brotli>=1.1.0",
    
    # LLM Integration
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "ollama>=0.1.0",
    "tiktoken>=0.5.0",
    
    # Security
    "cryptography>=41.0.0",
    "bcrypt>=4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    
    # Monitoring & Observability
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    
    # Utilities
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "markupsafe>=2.1.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
    "click>=8.1.0",
    
    # Date & Time
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "chardet>=5.2.0",
    "tldextract>=5.1.0",
    
    # HTTP & Network
    "httpx>=0.25.0",
    "urllib3>=2.1.0",
    "certifi>=2023.11.17",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
    
    # Code Quality
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=23.12.0",
    "flake8-comprehensions>=3.14.0",
    "flake8-simplify>=0.21.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-redis>=4.6.0",
    "types-PyYAML>=6.0.0",
    "types-python-dateutil>=2.8.0",
    
    # Security
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pip-audit>=2.6.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "pydocstyle>=6.3.0",
    "docformatter>=1.7.0",
    
    # Pre-commit
    "pre-commit>=3.6.0",
    
    # Build & Release
    "build>=1.0.0",
    "twine>=4.0.0",
    "bump2version>=1.0.0",
    
    # Performance profiling
    "py-spy>=0.3.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/scrapinium"
Documentation = "https://your-username.github.io/scrapinium/"
Repository = "https://github.com/your-username/scrapinium.git"
Issues = "https://github.com/your-username/scrapinium/issues"
Changelog = "https://github.com/your-username/scrapinium/blob/main/CHANGELOG.md"

[project.scripts]
scrapinium = "scrapinium.cli:main"
scrapinium-server = "scrapinium.api.app:main"
scrapinium-worker = "scrapinium.worker:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["scrapinium*"]
exclude = ["tests*"]

# ===========================
# TOOL CONFIGURATIONS
# ===========================

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]
known_first_party = ["scrapinium"]
known_third_party = [
    "fastapi",
    "pydantic", 
    "sqlalchemy",
    "playwright",
    "redis",
    "openai",
    "anthropic",
    "pytest",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "ollama.*", 
    "redis.*",
    "psutil.*",
    "lz4.*",
    "brotli.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src/scrapinium",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests", 
    "security: marks tests as security tests",
    "performance: marks tests as performance tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/scrapinium"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/migrations/*",
    "*/venv/*", 
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]